test/configCases/errors/exception-in-chunk-renderer/errors.js
module.exports = [
	[/Test exception/],
	[/Test exception/]
];
